--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "@tinymce/tinymce-react": "^4.0.0",
     "axios": "^0.26.1",
     "firebase": "^9.6.10",
+    "html-react-parser": "^1.4.14",
     "lodash": "^4.17.21",
     "node-sass": "^7.0.1",
     "prop-types": "^15.8.1",
+    "quill-image-uploader": "^1.2.2",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-error-boundary": "^3.1.4",
